<resources>
    <string name="app_name">TennisQuizTkRally</string>
    <string name="text_introduction">Answer 10 question about tennis and press submit to see your score!</string>
    <string name="your_score">Your score is:</string>
    <string name="question_1">1. Missing both first and second serves is called a:</string>
    <string name="question1_answer1">epic failure</string>
    <string name="question1_answer2">double fault</string>
    <string name="question1_answer3">deuce</string>
    <string name="question1_answer4">advantage</string>
    <string name="question2">2. The player who deliver the ball to start the points is called the _ _ _ _ _ _?</string>
    <string name="question2_answer1">Enter answer here</string>
    <string name="question3">3. Playing tennis helps improve:</string>
    <string name="question3_answer1">Eye hand coordination</string>
    <string name="question3_answer2">Quickness</string>
    <string name="question3_answer3">Endurance</string>
    <string name="question3_answer4">Drinking with friends</string>
    <string name="question4">4. Correct scorekeeping order is:</string>
    <string name="question4_answer1">45, 35, 20, 10</string>
    <string name="question4_answer2">love, 15, 30, 40</string>
    <string name="question4_answer3">15, 30, 45, love</string>
    <string name="question5">5. An ace is a:</string>
    <string name="question5_answer1">serve that goes out</string>
    <string name="question5_answer2">serve that hits the net and then goes in the box</string>
    <string name="question5_answer3">serve that is good and untouched by the returner</string>
    <string name="question5_answer4">serve that is hit with slice</string>
    <string name="question6">6. How many set is usualy needed to win match in tennis?</string>
    <string name="question6_answer1">Enter only number here</string>
    <string name="question7">7. The types of hittings swings include (more than one answer may apply):</string>
    <string name="question7_answer1">Underhand</string>
    <string name="question7_answer2">Forehand</string>
    <string name="question7_answer3">Lefthand</string>
    <string name="question7_answer4">Righthand</string>
    <string name="question7_answer5">Backhand</string>
    <string name="question8">8. Only wildcard to win a Grandslam (Wimbledon) ever was...</string>
    <string name="question8_answer1">Roger Federer (Swiss)</string>
    <string name="question8_answer2">Boris Becker (Germany)</string>
    <string name="question8_answer3">Goran Ivanišević (Croatia)</string>
    <string name="question8_answer4">Novak Đoković (Serbia)</string>
    <string name="question9">9. If I\'m serving and I win the first 2 points of the game, the game score is now:</string>
    <string name="question9_answer1">love, 30</string>
    <string name="question9_answer2">20, love</string>
    <string name="question9_answer3">deuce</string>
    <string name="question9_answer4">30, love</string>
    <string name="question10">10. The server gets two attempts to make a good serve.</string>
    <string name="answer_true">true</string>
    <string name="answer_false">false</string>
    <string name="submit">Submit</string>
</resources>
